--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
     <header id="header" class="bg-primary text-white text-center py-3">
         <div class="d-flex align-items-center justify-content-between container">
             <div class="d-flex align-items-center">
-                <img src="{% static 'images/code-harbor-logo.png' %}" alt="Code Harbor Logo" style="height: 50px; margin-right: 15px;">
-                <h1 class="mb-0">Code Harbor</h1>
+                <img src="{% static 'images/code-harbor-logo.png' %}" alt="Code Harbor Logo" class="logo-styling">
             </div>
+            <h1 class="mb-0 text-center flex-grow-1">Code Harbor</h1>
             <div class="toggle-container">
                 <span class="text-white me-2">Light</span>
                 <div id="toggle" class="toggle">
